* refined model to keep track of user & script parameters * implemented workspace change listener * added experimental support for menu/toolbar integration